Code tag bad contrast fix

--- a/buildDocs/docs/.vuepress/styles/index.styl
+++ b/buildDocs/docs/.vuepress/styles/index.styl
@@ -97,6 +97,9 @@ a.active.sidebar-link
 
 .language-text
   background-color: console-color !important
+  
+.theme-default-content code
+  color: #9efa9e
 
 tr
   background-color: #081008
